<resources>
    <string name="app_name">Echo Chat</string>
    <string name="toolbar_conversations">Conversations</string>
    <string name="hint_search">Search for friends</string>
    <string name="hint_type_message">Start typing...</string>
    <string name="text_active_now">Active now</string>
    <string name="last_seen_time">Last seen: %s</string>
    <string name="last_message_other">%s: %s</string>
    <string name="last_message_me">You: %s</string>
    <string name="last_message_me_image">You: Send a image.</string>
    <string name="last_message_me_video">You: Send a video.</string>
    <string name="last_message_other_image">%s: Send a image.</string>
    <string name="last_message_other_video">%s: Send a video.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification_not_available">Notification not available</string>
    <string name="new_user_sign_up">New user? <b>Sign up</b></string>
    <string name="sign_up">Sign up</string>
    <string name="had_a_account_sign_in">Have an account? <b>Sign in</b></string>
    <string name="sign_in">Sign in</string>
    <string name="terms_and_policy">I agree to <b>Terms</b> and <b>Privacy Policy</b></string>
    <string name="terms">Terms</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="email_must_not_be_empty">Email must not be empty</string>
    <string name="email_is_not_valid">Email is not valid</string>
    <string name="password_must_not_be_empty">Password must not be empty</string>
    <string name="login_failed">Login failed</string>
    <string name="login_successful">Login successful</string>
    <string name="name_must_not_be_empty">Name must not be empty</string>
    <string name="password_valid_condition">Password must be at least 6 characters long</string>
    <string name="register_failed">Register failed</string>
    <string name="register_successful">Register successful</string>
    <string name="new_message">New Message</string>
    <string name="you_have_a_new_notification">You have a new notification</string>
    <string name="let_start_conversation">Let talk together</string>
    <string name="send_friend_request">Send a friend request</string>
    <string name="sent_friend_request">Friend request sent</string>
    <string name="received_friend_request">You have received a friend request</string>
    <string name="can_not_reject_friend_request">Cannot cancel friend request</string>
    <string name="can_not_action">Action cannot be performed</string>
    <string name="users">USERS</string>
    <string name="received">RECEIVED</string>
    <string name="sent">SENT</string>
    <string name="we_are_not_friend">You and %s are not friends</string>
    <string name="can_handle">Unable to handle</string>
    <string name="log_out_successful">Log out successful</string>
    <string name="log_out_successful_but_cannot_delete_token">Log out successful, but cannot delete token</string>
    <string name="few_seconds_ago">A few seconds ago</string>
    <string name="minutes_ago">%d minutes ago</string>
    <string name="hours_ago">%d hours ago</string>
    <string name="choose_image_from_camera">Choose image from camera</string>
    <string name="choose_image_from_gallery">Choose image from gallery</string>
    <string name="chat">Chat</string>
    <string name="have_not_data">No data available</string>
    <string name="info_user">Personal information</string>
    <string name="block">Block</string>
    <string name="email">Email</string>
    <string name="birthday">Birthday</string>
    <string name="friends">Friends</string>
    <string name="messages">Messages</string>
    <string name="password">Password</string>
    <string name="full_name">Full name</string>
    <string name="sign_in_big">SIGN IN</string>
    <string name="sign_up_big">SIGN UP</string>
    <string name="language">Language</string>
    <string name="language_value">English</string>
    <string name="notification">Notification</string>
    <string name="version">Version</string>
    <string name="log_out">Log out</string>
    <string name="update_info_user">Edit personal information</string>
    <string name="save">Save</string>
    <string name="setting">Setting</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="english">English</string>
    <string name="let_start_a_chat">Let start a chat</string>
    <string name="option">Option:</string>
    <string name="generating_responses">Generating responses...</string>
    <string name="options">Options</string>
    <string name="ang_g_i">Sending...</string>
</resources>