<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_top">

        <TextView
            android:id="@+id/tv_no_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_not_data"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.bottomsheet.BottomSheetDragHandleView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:importantForAccessibility="no" />

            <TextView
                android:id="@+id/textViewGenerating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/generating_responses"
                android:padding="10dp"
                android:textSize="18dp"/>

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/progressIndicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                app:indicatorColor="@array/cat_custom_progress_colors"
                app:indeterminateAnimationType="contiguous"/>

            <TextView
                android:id="@+id/textViewOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/options"
                android:padding="10dp"
                android:textAlignment="center"
                android:textSize="25sp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_margin="10dp"
                android:id="@+id/recycleViewResponse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_response"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>